tests/mm0_mmu/fail/bad-sort1243.mmu
-- bad modifier order
(sort s1243 pure strict free provable)